Changelog for TimedMessages (v1.1.1-SNAPSHOT)

2012-03-03 18:30:42 +0000    fix erronous output of startcommand (James Richardson)
2012-03-03 18:26:35 +0000    fix for TimeFormatter outputting 0 when it should raise an exception (James Richardson)
2012-03-03 18:22:56 +0000    allow console to use ALL commands (James Richardson)
2012-03-03 18:22:43 +0000    allow console to use commands (James Richardson)
2012-03-03 18:17:24 +0000    updated base classes (James Richardson)
2012-03-03 18:00:17 +0000    updated all commands (James Richardson)
2012-03-03 17:23:35 +0000    started to update to the latest recommended build (James Richardson)

v1.1.0
2012-02-11 15:33:37 +0000    preparing to release (James Richardson)
2012-02-11 15:24:07 +0000    update pom and add automatic versioning to plugin.yml (James Richardson)
2012-02-11 15:20:29 +0000    to match my other projects (James Richardson)
2012-02-11 01:04:00 +0000    changed property for world to "world" from "world-name" (James Richardson)
2012-02-03 22:33:20 +0000    bumped version for testing (James Richardson)
2012-02-03 22:29:30 +0000    more useful debugging messages (James Richardson)
2012-02-03 22:21:06 +0000    fix NPE when calling getWorld() (James Richardson)
2012-02-03 22:15:11 +0000    fixed constructors not reflecting new Message class (James Richardson)
2012-02-03 22:09:43 +0000    added additional option to only broadcast to players in a particular world changed line breaking charector to /n (James Richardson)
2012-02-03 21:16:16 +0000    convert to use maven (James Richardson)
2011-12-22 17:30:39 +0000    forgot to mention splitting mutliple lines (James Richardson)
2011-12-22 17:29:15 +0000    needs trailing dots (James Richardson)
2011-12-22 17:28:24 +0000    change configuration list to numbers (James Richardson)
2011-12-22 17:27:38 +0000    case change in title (James Richardson)
2011-12-22 17:25:37 +0000    added new style README (James Richardson)