@@ -12,6 +12,7 @@ no-timers: no timers
 one-timer: one timer
 many-timers: {0,number} timers
 timers-started: Starting {0} in {1,number,integer} seconds.
+plugin-reloaded: {0} reloaded.
 
 # CommandManager messages
 command-no-permission: You are not allowed to do that.
@@ -49,7 +50,7 @@ statuscommand-permission-description: Allow users to check the status of TimedMe
 statuscommand-usage: 
 
 no-timers-running: No timers are currently running.
-timers-running: A total of {0} are running.
+timers-running: Currently running {0}.
 
 # StopCommand
 stopcommand-name: stop
@@ -58,8 +59,3 @@ stopcommand-permission-description: Allow users to stop all timed messages.
 stopcommand-usage: 
 
 timers-stopped: All timers have been stopped.
-
-public static final String NAME = "stop";
-  public static final String DESCRIPTION = "Stop all timed messages.";
-  public static final String PERMISSION_DESCRIPTION = "Allow users to stop all timed messages.";
-  public static final String USAGE = "";
